Home Pages Fixes

--- a/reactApp/src/_shared/header/index.less
+++ b/reactApp/src/_shared/header/index.less
@@ -1,11 +1,15 @@
 .customNavbar {
-    background: linear-gradient(0deg, #294f7b, #0f4687 50%);
+    background: linear-gradient(0deg, #142d4d, #0f4687 100%);
+
     .navbar-nav {
+        margin-left: 50px;
+
         .nav-link {
             color: #fff !important;
-            font-size: 18px;
-            font-weight: 500;
+            font-size: 20px;
+            font-weight: 300;
         }
+
         a {
             &:hover {
                 text-decoration: none;
@@ -20,7 +24,8 @@
 
         button {
             border: none;
-            span{
+
+            span {
                 filter: invert(1);
             }
         }
@@ -40,4 +45,24 @@
             margin: 0 15px;
         }
     }
+}
+
+@media screen and (max-width: 991px) {
+    
+
+    .customNavbar {
+
+        .navbar-nav {
+            margin-left: 0;
+        }
+
+        .login-btn {
+            margin: 0 !important;
+        }
+
+        .navbar-brand {
+            width: unset;
+        }
+    }
+
 }
