HomePage, Prize Fixes

--- a/reactApp/src/_components/PriceSlider/PriceSlider.less
+++ b/reactApp/src/_components/PriceSlider/PriceSlider.less
@@ -8,11 +8,14 @@
         position: inherit;
         flex-wrap: wrap;
         display: flex;
+        justify-content: center !important;
+
         li {
             width: 25%;
             position: initial;
             height: initial;
             margin: 0px 0px 10px;
+            margin: 7px !important;
             a {
                 display: inline-block;
             }
