--- a/reactApp/src/_shared/header/index.less
+++ b/reactApp/src/_shared/header/index.less
@@ -26,29 +26,126 @@
             border: none;
 
             span {
+                width: 24px;
+                height: 24px;
                 filter: invert(1);
             }
+        }
+
+        span.nav-link.active {
+            font-size: 12px;
         }
 
         p {
             margin: 0;
             color: #fff;
-            font-size: 18px;
+            font-size: 12px;
             font-weight: 400;
             line-height: 1;
         }
 
         .profile-pic {
-            width: 50px;
-            height: 50px;
+            width: 44px;
+            height: 44px;
             border-radius: 50%;
-            margin: 0 15px;
+            border: 2px solid #FFCF00;
+            margin: 0 10px;
+        }
+
+        .notif-icon {
+            width: 16px;
+            height: 16px;
+        }
+    }
+}
+
+#navModal {
+    .adjust-width {
+        margin: 0.5rem 0;
+        width: 100%;
+
+        .modal-content {
+            top: 60px;
+            border-top-left-radius: 0;
+            border-top-right-radius: 0;
+
+            .modal-body {
+
+                .header-box {
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+
+                    p {
+                        color: #104A8E;
+                        font-size: 12px;
+                        font-weight: 400;
+                        line-height: 1.2;
+                        margin: 0;
+                    }
+
+                    .btn-login {
+                        background-color: #104A8E;
+                        font-size: 20px;
+                        font-weight: 400;
+                        line-height: 1.3;
+                        border-radius: 15px;
+                        border: 1px solid #104A8E;
+                    }
+                }
+
+                .nav-btns {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-between;
+                    align-items: center;
+                    margin: 20px 0;
+
+                    .btn-page {
+                        background-color: #fff;
+                        border: 1px solid #104A8E;
+                        display: flex;
+                        align-items: center;
+                        justify-content: space-between;
+                        width: 100%;
+                        padding: 9px 10px;
+                        border-radius: 15px;
+                        box-shadow: 1px 3px 3px 0px #0000002b;
+                        margin-bottom: 5px;
+
+                        span {
+                            display: flex;
+                            justify-content: space-between;
+                            align-items: center;
+
+                            p {
+                                font-size: 13px;
+                                font-weight: 400;
+                                line-height: 1.2;
+                                color: #104A8E;
+                                margin: 0 0 0 5px;
+                            }
+                        }
+                    }
+                }
+
+                .store-icons {
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+
+                    a:nth-child(1) {
+                        margin-right: 5px;
+                        margin-top: 2px;
+                    }
+                }
+            }
         }
     }
 }
 
 @media screen and (max-width: 991px) {
-    
+
 
     .customNavbar {
 
