--- a/reactApp/src/_components/PriceSlider/PriceSlider.less
+++ b/reactApp/src/_components/PriceSlider/PriceSlider.less
@@ -2,6 +2,7 @@
     .sliderSwipeBox {
         position: relative;
     }
+
     .slick-dots {
         bottom: 0;
         display: flex !important;
@@ -10,28 +11,39 @@
         display: flex;
         justify-content: center !important;
 
+
         li {
-            width: 25%;
+            // width: 80px;
+            // height: 40px;
+            width: 20%;
             position: initial;
             height: initial;
             margin: 0px 0px 10px;
             margin: 7px !important;
+
             a {
                 display: inline-block;
             }
+
             img {
-                height: 45px;
-                width: 100%;
+                height: 40px;
+                width: 80px;
+                // height: 45px;
+                // width: 100%;
             }
         }
     }
 }
-@media (max-width: 320px) {
+
+@media (max-width: 480px) {
     .SliderPrice {
         .slick-dots {
+            width: 93%;
+            margin: 0 auto;
+
             li {
                 width: 19%;
             }
         }
-    } 
+    }
 }
