--- a/reactApp/src/pages/Signup/Signup.less
+++ b/reactApp/src/pages/Signup/Signup.less
@@ -737,10 +737,26 @@
                 }
             }
 
-            .signupBtn{
+            .signupBtn {
                 width: 132px;
             }
 
         }
+    }
+}
+
+// .m-block {
+//     display: block !important;
+// }
+
+@media screen and (min-width: 992px) {
+    .m-block {
+        display: none !important;
+    }
+}
+
+@media screen and (max-width: 991px) {
+    .m-none {
+        display: none !important;
     }
 }
