Winners List UI

--- a/reactApp/src/pages/Winners/winners-list/winners-list.less
+++ b/reactApp/src/pages/Winners/winners-list/winners-list.less
@@ -33,3 +33,231 @@
    font-size: 11px;
    color: #141930;
 }
+
+.winners-experience {
+   margin: 2rem 0 3rem;
+
+   .row {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+   }
+
+   .feature-video {
+      position: relative;
+
+      .play-btn {
+         position: absolute;
+         border: none;
+         background-color: transparent;
+         top: 38%;
+         left: 50%;
+         z-index: 1;
+      }
+   }
+
+   .details {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100%;
+
+      .prof-img {
+         width: 125px;
+         height: 125px;
+         border-radius: 50%;
+         border: 2px solid #FFCF00;
+         box-shadow: 0px 6px 6px #00000029;
+      }
+
+      .text-box {
+
+         .qoute-icon {
+            top: 15%;
+            position: absolute;
+         }
+
+         .text-wrapper {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 1rem 4rem;
+            margin-top: 1rem;
+
+            .text {
+               font-size: 30px;
+               font-weight: 400;
+               color: #4e4e4ecc;
+               line-height: 1.1;
+            }
+
+            .user-name {
+               font-size: 25px;
+               font-weight: 600;
+               line-height: 1.2;
+               color: #104a8e;
+               margin: 0;
+               text-align: center;
+            }
+
+            small {
+               font-size: 18px;
+               font-weight: 400;
+               line-height: 1.2;
+               color: #104a8e;
+               margin: 0;
+               text-align: center;
+            }
+         }
+      }
+   }
+
+}
+
+@media (min-width: 1200px) and (max-width: 1319px) {
+
+   .winners-experience {
+      .details {
+         .prof-img {
+            width: 100px;
+            height: 100px;
+         }
+
+         .text-box {
+            .qoute-icon {
+               width: 10%;
+               top: 18%;
+            }
+
+            .text-wrapper {
+               padding: 1rem 2rem;
+
+               .text {
+                  font-size: 18px;
+               }
+
+               .user-name {
+                  font-size: 20px;
+               }
+
+               small {
+                  font-size: 14px;
+               }
+            }
+         }
+      }
+
+      .EL-number,
+      .Trip-country {
+         font-size: 1rem;
+      }
+
+      .EL-coupon {
+         left: 38%;
+      }
+
+      .coupon-name,
+      .name {
+         left: 57%;
+      }
+
+      .purchase-date,
+      .date,
+      .coupon-name,
+      .name {
+         font-size: 0.6rem;
+      }
+   }
+}
+
+@media (min-width: 426px) and (max-width: 768px) {
+   .winners-experience {
+      .feature-video {
+         .play-btn {
+            top: 36%;
+            left: 45%;
+
+            img {
+               width: 70px;
+               height: 70px;
+            }
+         }
+      }
+   }
+}
+
+@media (min-width: 1320px) and (max-width: 1400px) {
+
+   .winners-experience {
+      .details {
+         .prof-img {
+            width: 110px;
+            height: 110px;
+         }
+
+         .text-box {
+            .qoute-icon {
+               width: 10%;
+               top: 18%;
+            }
+
+            .text-wrapper {
+               padding: 1rem 3rem;
+
+               .text {
+                  font-size: 20px;
+               }
+
+               .user-name {
+                  font-size: 22px;
+               }
+
+               small {
+                  font-size: 16px;
+               }
+            }
+         }
+      }
+
+      .EL-coupon {
+         left: 38%;
+      }
+
+      .coupon-name,
+      .name {
+         left: 57%;
+      }
+   }
+}
+
+@media (min-width: 1401px) and (max-width: 1650px) {
+   .winners-experience {
+      .details {
+         .prof-img {
+            width: 120px;
+            height: 120px;
+         }
+
+         .text-box {
+            .qoute-icon {
+               width: 12%;
+            }
+
+            .text-wrapper {
+               .text {
+                  font-size: 24px;
+               }
+
+               .user-name {
+                  font-size: 23px;
+               }
+
+               small {
+                  font-size: 16px;
+               }
+            }
+         }
+      }
+   }
+}
