Navigations, Winners List Mobile UI fixes

--- a/reactApp/src/pages/Winners/winners-list/winners-list.less
+++ b/reactApp/src/pages/Winners/winners-list/winners-list.less
@@ -171,6 +171,122 @@
    }
 }
 
+@media screen and (max-width: 425px) {
+   #winners-list {
+
+      .winner-input-container {
+         width: 60%;
+      }
+
+      .icon-container {
+         .img-fluid {
+            width: 20px;
+            height: 20px;
+         }
+      }
+
+      .accordion-header.lg-font {
+         font-size: 1rem;
+      }
+
+      .question-container {
+         .ml-5 {
+            margin-left: 1rem !important;
+         }
+      }
+
+      .accordion-header.sm-font {
+         font-size: 0.7rem;
+      }
+
+      .winners-experience {
+
+         .feature-video {
+            .play-btn {
+               top: 30%;
+               left: 40%;
+
+               img {
+                  width: 55px;
+                  height: 55px;
+               }
+            }
+         }
+
+         .details {
+            margin-top: 1rem;
+
+            .prof-img {
+               width: 60px;
+               height: 60px;
+            }
+
+            .text-box {
+               .qoute-icon {
+                  width: 9%;
+                  top: 16%;
+               }
+
+               .text-wrapper {
+                  padding: 1rem 2rem;
+
+                  .text {
+                     font-size: 18px;
+                  }
+
+                  .user-name {
+                     font-size: 16px;
+                  }
+
+                  small {
+                     font-size: 12px;
+                  }
+
+               }
+            }
+         }
+
+         .coupons-card {
+            .header {
+               top: 0%;
+
+               img {
+                  width: 70%;
+               }
+            }
+
+            .EL-number {
+               font-size: 0.7rem;
+            }
+
+            .EL-coupon {
+               left: 49%;
+               top: 15%;
+            }
+
+            .Trip-country {
+               font-size: 1.1rem;
+               top: 52%;
+            }
+
+            .date,
+            .purchase-date .coupon-name,
+            .name {
+               font-size: 0.55rem;
+            }
+
+
+            .coupon-name,
+            .name {
+               left: 57%;
+            }
+
+
+         }
+      }
+   }
+}
+
 @media (min-width: 426px) and (max-width: 768px) {
    .winners-experience {
       .feature-video {
